--- a/Lista_2/Q01/Makefile
+++ b/Lista_2/Q01/Makefile
@@ -1,16 +1,5 @@
-all: main
 
-main: main.o time_syscall.o
-	gcc -m32 main.o time_syscall.o -o main
-
-main.o: main.c
-	gcc -m32 -c main.c -o main.o
-
-time_syscall.o: time_syscall.asm
-	nasm -f elf32 time_syscall.asm -o time_syscall.o
-
-run: main
+run:
+	nasm -f elf32 main.asm -o main.o
+	ld -m elf_i386 main.o -lc -dynamic-linker /lib/ld-linux.so.2 -o main
 	./main
-
-clean:
-	rm -f main main.o time_syscall.o
